--- a/src/site/markdown/get-started.md.vm
+++ b/src/site/markdown/get-started.md.vm
@@ -37,7 +37,7 @@ A release to CRAN is planned. In the meantime, just open an R session and submit
 $RCODE
 install.packages(c('rJava', 'R6', 'RJSDMX', 'igraph', 'networkD3', 'DT',  
         'shiny', 'shinydashboard', 'shinyjs', 'sortable', 'jdx', 'xtable', 'dplyr'))
-install.packages('${scm-url}/releases/download/v${project.version}/RVTL_${project.version}.tar.gz', repos = NULL)
+install.packages('${scmUrl}/releases/download/v${project.version}/RVTL_${project.version}.tar.gz', repos = NULL)
 $CEND
 
 R will download the package from GitHub and install it on your machine with all required dependencies.
