--- a/vtl-bundles/vtl-r/RVTL/src/main/resources/R/inst/VTLStudio/www/static/vtl-editor.css
+++ b/vtl-bundles/vtl-r/RVTL/src/main/resources/R/inst/VTLStudio/www/static/vtl-editor.css
@@ -21,6 +21,40 @@
   padding: 0 !important;
 }
 
+.bslib-card .card-body {
+    min-height: 10em;
+}
+
+.with-editor::after {
+  content: '▼';
+  margin-left: 1em;
+  font-size: 0.7em;
+  vertical-align: middle;
+}
+
+.with-editor.open::after {
+  content: '▲';
+}
+
+.vtl-tab-menu {
+  position: absolute; /* must remain absolute */
+  background: #fff;
+  border: 1px solid #ccc;
+  padding: 10px;
+  list-style: none;
+  margin: 0;
+  z-index: 1000;
+  visibility: hidden;
+  opacity: 0;
+  transition: visibility 0s linear 0.2s, opacity 0.2s;
+}
+
+.vtl-tab-menu.open {
+  visibility: visible;
+  opacity: 1;
+  transition-delay: 0s;
+}
+
 [data-value="Graph Explorer"] > .forceNetwork {
   width: 100%;
   height: 100%;
@@ -81,23 +115,42 @@
   position: relative;
 }
 
-/* Code editor tab contents */
-.tab-content .tab-pane.active:first-child {
+.tab-pane .tab-pane.tab-disabled {
+  pointer-events: none;
+  opacity: 0.6;
+}
+
+.tab-pane:has(.tab-pane .vtlwell) {
+  height: calc(100vh - 45px);
+  padding: 0;
+  overflow-y: auto;
+  position: relative;
+}
+
+.tab-pane.active .tab-pane.active {
+  display: flex;
+  flex-direction: column;
+  padding: 10px;
+  overflow-y: hidden;
+}
+
+.tab-pane.active .tab-pane.active[data-value="editor"] {
   display: flex;
   flex-direction: column;
   padding: 0;
   overflow-y: hidden;
+  flex-grow: 1
 }
 
-#vtlwell {
+.tab-pane.active .tab-pane.active .vtlwell {
 	flex-grow: 1;
 }
 
-.cm-editor {
+.tab-pane.active .tab-pane.active .vtlwell .cm-editor {
 	height: 100%;
 }
 
-#vtl_output {
+.tab-pane.active .tab-pane.active .vtloutput {
 border-radius: 0;
   padding: 0;
   margin: 0;
@@ -106,9 +159,4 @@ border-radius: 0;
   flex-basis: auto;
   max-height: 30%;
   overflow-y: auto;
-}
-
-.tab-disabled {
-  pointer-events: none;
-  opacity: 0.6;
 }
