--- a/vtl-bundles/vtl-r/RVTL/src/main/resources/R/inst/VTLStudio/www/static/bootstrap-icons.css
+++ b/vtl-bundles/vtl-r/RVTL/src/main/resources/R/inst/VTLStudio/www/static/bootstrap-icons.css
@@ -1,26 +1,14 @@
-/**
- * Copyright © 2020 Banca D'Italia
- *
- * Licensed under the EUPL, Version 1.2 (the "License");
- * You may not use this work except in compliance with the
- * License.
- * You may obtain a copy of the License at:
- *
- * https://joinup.ec.europa.eu/sites/default/files/custom-page/attachment/2020-03/EUPL-1.2%20EN.txt
- *
- * Unless required by applicable law or agreed to in
- * writing, software distributed under the License is
- * distributed on an "AS IS" basis,
- * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either
- * express or implied.
- *
- * See the License for the specific language governing
- * permissions and limitations under the License.
+/*!
+ * Bootstrap Icons v1.11.3 (https://icons.getbootstrap.com/)
+ * Copyright 2019-2024 The Bootstrap Authors
+ * Licensed under MIT (https://github.com/twbs/icons/blob/main/LICENSE)
  */
+
 @font-face {
   font-display: block;
   font-family: "bootstrap-icons";
-  src: url("./bootstrap-icons.woff2") format("woff2");
+  src: url("./bootstrap-icons.woff2?dd67030699838ea613ee6dbda90effa6") format("woff2"),
+url("./bootstrap-icons.woff?dd67030699838ea613ee6dbda90effa6") format("woff");
 }
 
 .bi::before,
@@ -2088,31 +2076,3 @@
 .bi-suitcase2-fill::before { content: "\f901"; }
 .bi-suitcase2::before { content: "\f902"; }
 .bi-vignette::before { content: "\f903"; }
-.bi-bluesky::before { content: "\f7f9"; }
-.bi-tux::before { content: "\f904"; }
-.bi-beaker-fill::before { content: "\f905"; }
-.bi-beaker::before { content: "\f906"; }
-.bi-flask-fill::before { content: "\f907"; }
-.bi-flask-florence-fill::before { content: "\f908"; }
-.bi-flask-florence::before { content: "\f909"; }
-.bi-flask::before { content: "\f90a"; }
-.bi-leaf-fill::before { content: "\f90b"; }
-.bi-leaf::before { content: "\f90c"; }
-.bi-measuring-cup-fill::before { content: "\f90d"; }
-.bi-measuring-cup::before { content: "\f90e"; }
-.bi-unlock2-fill::before { content: "\f90f"; }
-.bi-unlock2::before { content: "\f910"; }
-.bi-battery-low::before { content: "\f911"; }
-.bi-anthropic::before { content: "\f912"; }
-.bi-apple-music::before { content: "\f913"; }
-.bi-claude::before { content: "\f914"; }
-.bi-openai::before { content: "\f915"; }
-.bi-perplexity::before { content: "\f916"; }
-.bi-css::before { content: "\f917"; }
-.bi-javascript::before { content: "\f918"; }
-.bi-typescript::before { content: "\f919"; }
-.bi-fork-knife::before { content: "\f91a"; }
-.bi-globe-americas-fill::before { content: "\f91b"; }
-.bi-globe-asia-australia-fill::before { content: "\f91c"; }
-.bi-globe-central-south-asia-fill::before { content: "\f91d"; }
-.bi-globe-europe-africa-fill::before { content: "\f91e"; }
